music-app (2.4) UNRELEASED; urgency=medium

  [ Victor Thompson ]
  * Release 2.3 and start 2.4

 -- Victor <victor@victor-virtual-machine>  Wed, 27 Jan 2016 19:40:55 -0600

music-app (2.3) vivid; urgency=medium

  [ Andrew Hayzen ]
  * Release 2.2ubuntu2 and start on 2.3
  * Use ListItemLayout for listitems to improve performance and match design guidelines (LP: #1526247).
  * Switch to using Qt GridView instead of custom CardView
  * Add support for media-hub background playlists
  * Bump framework to 15.04.3-qml
  * Bump QtMultimedia import to 5.6

  [ Ken VanDine ]
  * Install the content-hub json file in the correct place for peer registry

  [ Vamshi Balanaga ]
  * Add test to make sure that the LibraryEmptyState page is visible when no audio is  detected on the device (LP: #1261587).

  [ Girish Rawat ]
  * Expanded and updated READMEs

 -- Victor <victor@victor-virtual-machine>  Wed, 27 Jan 2016 19:40:13 -0600

music-app (2.2ubuntu2) vivid; urgency=medium

  [ Bartosz Kosiorek ]
  *  Reduce size of images (with tinypng.com) to decrease click size and improve performance

  [ Victor Thompson ]
  * Remove some deprecated code for the UbuntuShape image property.
  * Update app to use the Ubuntu Components version 1.3 (LP: #1508363)
  * Update canned mediastore.db schema version from 8 to 9 (LP: #1511585).
  * Update canned mediastore.db schema version from 9 to 10.
  * Add directions for updating and debugging schema version changes.
  * Add initial page sections to Now Playing view (LP: #1447428)
  * Resolve FIXMEs/TODOs in main qml file
  * Resolve DEPRECATED warnings in Theme files

  [ Andrew Hayzen ]
  * Switch to using the new uc1.3 listitems within the SDK
  * Workaround for bug 1514143 by locking the header when searching (LP: #1514143)

 -- Andrew Hayzen <ahayzen@gmail.com>  Thu, 03 Dec 2015 14:10:59 +0000

music-app (2.2ubuntu1) vivid; urgency=medium

  [ Victor Thompson ]
  * Fix SongsView album art for albums and genres (LP: #1477366)