@@ -96,7 +96,7 @@ MusicPage {
             property string count: model.count
 
             primaryText: playlist.name
-            secondaryText: i18n.tr("%1 song", "%1 songs", playlist.count).arg(playlist.count)
+            secondaryText: i18n.tr("%1 track", "%1 track", playlist.count).arg(playlist.count)
 
             onClicked: {
                 Playlists.addToPlaylistList(name, chosenElements)
